# gamebient-bevy-template

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.sh  build_web.sh  fetch-cartridge.sh  index.html  init-game.sh  install.sh  nginx.conf  package.sh  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: info.json
docs/: build-and-release.md  conventions.md
docs/superpowers/plans/: 2026-07-10-presentation-kit-template.md  2026-07-18-controls-canon-template.md  2026-07-19-backbuffer-pin.md  2026-07-20-audio-kit-template.md
docs/superpowers/specs/: 2026-07-10-presentation-kit-rollout-design.md  2026-07-18-controls-canon-design.md  2026-07-19-backbuffer-pin-design.md  2026-07-20-audio-kit-design.md
src/: main.rs
src/assets/: mod.rs
src/game/: input.rs  mod.rs  player.rs  scoring.rs  states.rs
src/game/audio/: mod.rs  synth.rs
src/ui/: how_to_play.rs  hud.rs  menu.rs  mod.rs  studio_logo.rs  transition.rs
