[package]
name = "gamebient-game"
version = "0.1.0"
edition = "2024"

[dependencies]
# Curated Bevy feature set — drops bevy_gltf, bevy_animation, bevy_gizmos,
# bevy_scene, bevy_picking, morph, ktx2, custom_cursor, sysinfo_plugin and the
# platform-specific window backends (wayland/x11/gilrs/android). All confirmed
# unused via grep against src/. Platform-specific features get re-added below
# for native targets only, so they don't bloat the wasm build.
bevy = { version = "0.18", default-features = false, features = [
    "async_executor",
    "bevy_asset",
    "bevy_audio",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_mikktspace",
    "bevy_pbr",
    "bevy_post_process",
    "bevy_render",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "std",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    # zstd_rust: required by bevy_pbr/core_pipeline/anti_alias which
    # unconditionally enable bevy_image/zstd. Pure-Rust backend keeps the
    # wasm build self-contained (zstd_c needs a C toolchain).
    "zstd_rust",
] }
rand = "0.9"

# Native-only Bevy features: linux window backends and gilrs gamepad support.
# Excluded from the wasm build so they don't add dead code paths.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18", features = ["bevy_gilrs", "wayland", "x11"] }

# getrandom 0.3+ requires both the wasm_js feature AND the cfg flag
# (.cargo/config.toml sets --cfg getrandom_backend="wasm_js")
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "s"
